--- a/src/styles/components/sec-about.scss
+++ b/src/styles/components/sec-about.scss
@@ -86,5 +86,6 @@
 @media screen and (min-width: 1200px) {
     #about {
         margin-top: converter(96);
+        background-color: colors.$cl-01;
     }
 }
